<resources>
    <string name="app_name">Vulpecula</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="doe">Doe</string>
    <string name="john">John</string>
    <string name="complete">Complete</string>
    <string name="input_code">Input code</string>
    <string name="debug_code">123456</string>
    <string name="input_number">Input your phone number</string>
    <string name="debug_number">+375123456789</string>
    <string name="send_code">Send code</string>
    <string name="order_status_icon">Order status icon</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_3more">3+</string>
    <string name="cancel">Cancel</string>
    <string name="seats">Seats</string>
    <string name="from_e_g_minsk">From, e.g. Minsk</string>
    <string name="to_e_g_barysaw">To, e.g. Barysaw</string>
    <string name="when_e_g_14_05_23">When, e.g. 14.05.23</string>
    <string name="search">Search</string>
    <string name="no_active_tickets">No active tickets</string>
    <string name="booked">Booked</string>
    <string name="active">Active</string>
    <string name="no_booked_tickets">No booked tickets</string>
    <string name="archived">Archived</string>
    <string name="no_archived_tickets">No archived tickets</string>
    <string name="back">Back</string>
    <string name="cancel_order">Cancel order</string>
    <string name="statistics">Statistics</string>
    <string name="contact_us">Contact us</string>
    <string name="tickets">tickets</string>
    <string name="please_login">Please, login</string>
    <string name="confirm">Confirm</string>
    <string name="hour">h</string>
    <string name="minute">min</string>
</resources>