<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.TicketsFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="inc.fabudi.rentors.viewmodels.TicketsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/tickets_app_bar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="?attr/colorPrimary"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/tickets_app_bar_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/v_button_sm"
                android:padding="12dp"
                android:src="@drawable/baseline_arrow_back_24"
                app:tint="#FFFFFF" />

            <TextView
                android:id="@+id/tickets_app_bar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Tickets"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_account_box_24"
                android:visibility="invisible" />

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tickets_app_bar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/semi_circle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tickets_active_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/active"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tickets_active_count"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="2dp"
                        android:background="@drawable/count_circle"
                        android:gravity="center"
                        android:minWidth="20dp"
                        android:paddingStart="4dp"
                        android:paddingEnd="4dp"
                        android:text="@{String.valueOf(viewModel.activeTickets.size())}"
                        android:textColor="@color/white"
                        android:visibility="@{viewModel.noActiveTickets ? View.GONE : View.VISIBLE, default=gone}" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tickets_active_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:nestedScrollingEnabled="false"
                    android:visibility="@{viewModel.noActiveTickets ? View.GONE : View.VISIBLE, default=gone}"
                    tools:listitem="@layout/ticket_row" />

                <TextView
                    android:id="@+id/tickets_active_empty_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:gravity="center"
                    android:text="@string/no_active_tickets"
                    android:visibility="@{viewModel.noActiveTickets ? View.VISIBLE : View.GONE, default=visible}" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tickets_booked_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/booked"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tickets_booked_count"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="2dp"
                        android:background="@drawable/count_circle"
                        android:gravity="center"
                        android:minWidth="20dp"
                        android:paddingStart="4dp"
                        android:paddingEnd="4dp"
                        android:text="@{String.valueOf(viewModel.bookedTickets.size())}"
                        android:textColor="@color/white"
                        android:visibility="@{viewModel.noBookedTickets ? View.GONE : View.VISIBLE, default=gone}" />
                </LinearLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tickets_booked_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:nestedScrollingEnabled="false"
                    android:visibility="@{viewModel.noBookedTickets ? View.GONE : View.VISIBLE, default=gone}"
                    tools:listitem="@layout/ticket_row" />

                <TextView
                    android:id="@+id/tickets_booked_empty_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:gravity="center"
                    android:text="@string/no_booked_tickets"
                    android:visibility="@{viewModel.noBookedTickets ? View.VISIBLE : View.GONE, default=visible}" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tickets_archived_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/archived"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tickets_archived_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="30dp"
                    android:nestedScrollingEnabled="false"
                    android:visibility="@{viewModel.noArchivedTickets ? View.GONE : View.VISIBLE, default=gone}"
                    tools:listitem="@layout/ticket_row" />

                <TextView
                    android:id="@+id/tickets_archived_empty_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:gravity="center"
                    android:text="@string/no_archived_tickets"
                    android:visibility="@{viewModel.noArchivedTickets ? View.VISIBLE : View.GONE, default=visible}" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

